# ai-eng-pi-2

./: .env.example  .gitignore  00 data-pipeline.ipynb  01 query-pipeline.ipynb  README.md  instrucciones.md  pyproject.toml
data/: faq_document.md  prompt.txt
metrics/: metrics.csv
outputs/: sample_queries.json  sample_queries_fixed.json  sample_queries_fixed_size.json  sample_queries_semantic.json  sample_queries_semantico.json
prompts/: main_prompt.txt
src/: agent.py  chunking_fixed_size.py  chunking_semantico.py  log_gen.py  pricing_estimates.py
