[project]
name = "ai-eng-pi-2"
version = "0.1.0"
description = "Proyecto integrador modulo 2 | Ai Engineering | Henry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "ipykernel>=7.2.0",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "tiktoken>=0.12.0",
]
